--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,35 @@
-Package: pkg.template
-Title: Install Materials for TODO
+Package: quarto.workshop
+Title: Install Materials for Reproducible Research in R with Quarto
 Version: 0.0.1
 Authors@R: 
     person("Malcolm", "Barrett", , "malcolmbarrett@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-0299-5825"))
-Description: Install learning materials for TODO.
+Description: Install learning materials for Reproducible Research in R
+    with Quarto.
 License: CC BY 4.0
+URL: https://github.com/emptyfield-ds/quarto.workshop
+BugReports: https://github.com/emptyfield-ds/quarto.workshop/issues
+Imports: 
+    broom,
+    car,
+    emptyfield (>= 0.0.1),
+    gapminder,
+    ggdag,
+    gtsummary,
+    here,
+    knitr,
+    pak,
+    patchwork,
+    quarto,
+    ragg,
+    rmarkdown,
+    tidyverse,
+    usethis
+Suggests: 
+    testthat (>= 3.0.0)
+Remotes: 
+    emptyfield-ds/emptyfield
+Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
-Imports: 
-    emptyfield (>= 0.0.1),
-    usethis
-Remotes: 
-    emptyfield-ds/emptyfield
-Suggests: 
-    testthat (>= 3.0.0)
-Config/testthat/edition: 3
-URL: https://github.com/emptyfield-ds/pkg.template
-BugReports: https://github.com/emptyfield-ds/pkg.template/issues
